--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -15,6 +15,15 @@
         background: #016486;
     }
 
+    &:focus {
+        outline: 2px solid #90caf9;
+        box-shadow: 0 0 0 2px #90caf9;
+    }
+
+    &:active {
+        background: #0d47a1;
+    }
+
     &__single-icon {
         padding: 13px;
     }
