--- a/src/app/shared/components/info/info.component.html
+++ b/src/app/shared/components/info/info.component.html
@@ -1,8 +1,7 @@
 <div class="app-info">
   <!-- Replace ::text:: with your code -->
   <div class="app-info__header">{{ title }}</div>
-  <div class="app-info__text" *ngif="text">{{ text }}</div>
+  <div class="app-info__text" *ngIf="text">{{ text }}</div>
   <ng-content>
-    <app-button [buttonText]="'Add new courses'"></app-button>
   </ng-content>
 </div>
