--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -6,14 +6,22 @@
         <div class="form__control">
           <label for="email">Email</label>
           <!--Use the name `email` for the form control.-->
-          <input type="text" id="email" placeholder="Input text"/>
-          <span id="emailErrorMessage" class="text-danger">Email is required.</span>
+          <input type="text" id="email" name="email" placeholder="Input text" ngModel emailValidator required />
+          <span id="emailErrorMessage" class="text-danger"
+            *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">Email
+            is required.</span>
         </div>
         <div class="form__control">
           <label for="password">Password</label>
           <!--Use the name `password` for the form control.-->
-          <input type="password" id="password" placeholder="Input text"/>
-          <span id="passwordErrorMessage" class="text-danger">Password is required.</span>
+          <input type="password" id="password" name="password" placeholder="Input text" togglePassword
+            #pwd="togglePassword" ngModel required />
+          <button type="button" (click)="pwd.toggle()">
+            {{ pwd.visible ? 'Hide' : 'Show' }}
+          </button>
+          <span id="passwordErrorMessage" class="text-danger"
+            *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">Password
+            is required.</span>
         </div>
       </div>
       <div>
