--- a/src/app/shared/components/registration-form/registration-form.component.html
+++ b/src/app/shared/components/registration-form/registration-form.component.html
@@ -22,11 +22,7 @@
         <div class="form__control">
           <!--Use the name `password` for the form control.-->
           <label for="password">Password</label>
-          <input type="password" id="password" placeholder="Input text" togglePassword #pwd="togglePassword"
-            formControlName="password" required />
-          <button type="button" (click)="pwd.toggle()">
-            {{ pwd.visible ? 'Hide' : 'Show' }}
-          </button>
+          <input type="password" id="password" placeholder="Input text" formControlName="password" required />
           <span id="passwordErrorMessage" class="text-danger"
             *ngIf="registrationForm.controls['password'].invalid && registrationForm.controls['password'].touched">Password
             is required.</span>
