fix: task03 course form author validation

--- a/src/app/shared/components/course-form/course-form.component.html
+++ b/src/app/shared/components/course-form/course-form.component.html
@@ -26,7 +26,7 @@
       <div class="form__control">
         <div class="course__flex">
           <!--Use the name `author` for the form control.-->
-          <input type="text" id="author" placeholder="Input Author Name" formControlName="newAuthor" />
+          <input type="text" id="author" placeholder="Input Author Name" formControlName="author" />
           <app-button id="createAuthor" (click)="createAuthor()">Create Author</app-button>
         </div>
         <span id="authorErrorMessage">New author should contain only latin letters and numbers.</span>
