--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -6,26 +6,29 @@
         <div class="form__control">
           <label for="email">Email</label>
           <!--Use the name `email` for the form control.-->
-          <input type="text" id="email" name="email" placeholder="Input text" ngModel emailValidator required />
+          <input type="text" id="email" name="email" placeholder="Input text" [(ngModel)]="email" emailValidator
+            required />
           <span id="emailErrorMessage" class="text-danger"
-            *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">Email
+            *ngIf="loginForm.controls['email']?.invalid && loginForm.controls['email']?.touched">Email
             is required.</span>
         </div>
         <div class="form__control">
           <label for="password">Password</label>
           <!--Use the name `password` for the form control.-->
-          <input type="password" id="password" name="password" placeholder="Input text" ngModel required />
+          <input type="password" id="password" name="password" placeholder="Input text" [(ngModel)]="password"
+            required />
           <span id="passwordErrorMessage" class="text-danger"
-            *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password']?.touched">Password
+            *ngIf="loginForm.controls['password']?.invalid && loginForm.controls['password']?.touched">Password
             is required.</span>
         </div>
       </div>
       <div>
         <div class="form__action">
-          <app-button></app-button>
+          <app-button [buttonText]="'Login'" (click)="onSubmit()"></app-button>
         </div>
+        <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div>
         <div class="form__text">
-          If you don't have an account you may <strong>Registration</strong>
+          If you don't have an account you may <strong (click)="navigateToRegister()">Registration</strong>
         </div>
       </div>
     </div>
